--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-tensorflow>=2.13.0
-numpy>=1.21.0
-pandas>=1.3.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
-scikit-learn>=1.0.0
-opencv-python>=4.5.0
-Pillow>=8.3.0
+tensorflow-macos==2.11.0
+tensorflow-metal==0.7.0
+numpy>=1.19.5
+opencv-python-headless>=4.5.1.48
+pandas>=1.1.5
+scikit-learn>=0.24.2
+matplotlib>=3.3.4
+tqdm>=4.59.0
+Pillow>=8.1.0
 editdistance>=0.6.0
-tqdm>=4.62.0
+python-Levenshtein>=0.12.2
+h5py>=3.1.0
+joblib>=1.0.1
